# ReconX-ZecX

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  run-dev.bat  run-dev.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
dev/: test_site.py
dev/tmp/: dirscan.json  portscan.json  sub6.json  subscan.json
reconx/: cli.py  config.py  db.py  job_manager.py  logging_config.py  metrics.py  models.py  utils.py
reconx/api/: deps.py  main.py  routes_dirs.py  routes_jobs.py  routes_ports.py  routes_subdomains.py
reconx/scanners/dirs/: crawler.py  runner.py
reconx/scanners/ports/: runner.py
reconx/scanners/subdomains/: runner.py
reconx/tests/: test_api_smoke.py  test_ports.py  test_subdomains.py
reconx/ui/: index.html  package-lock.json  package.json  vite.config.ts
reconx/ui/src/: main.tsx  styles.css
reconx/ui/src/modules/: Dashboard.tsx
viz-recon-main/: README.md  index.html  package-lock.json  package.json  run-dev.bat  tailwind.config.ts  vercel.json  vite.config.ts
viz-recon-main/public/: site.webmanifest
viz-recon-main/src/: App.tsx  index.css
viz-recon-main/src/components/: Dashboard.tsx
viz-recon-main/src/utils/: api.ts  date.ts
