[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconx"
version = "0.1.0"
description = "ReconX - Lightweight reconnaissance toolkit"
requires-python = ">=3.11"
authors = [{ name = "ReconX" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.19",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "aiodns>=3.0",
    "python-multipart>=0.0.9",
    "rich>=13.7",
    "structlog>=24.1",
    "python-json-logger>=2.0",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
reconx = "reconx.cli:app"

[tool.pytest.ini_options]
addopts = "-q --cov=reconx --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["reconx"]

[tool.setuptools.packages.find]
include = ["reconx*"]
exclude = ["alembic*", "reconx/ui*", "reconx/tests*"]
